@@ -2,224 +2,167 @@
 
 ## System Responsibility
 
-Spring Boot service that owns ORISO tenant records, tenant settings, legal content, subdomain resolution, tenant admin controls, and tenant-specific integration with ConsultingType, ApplicationSettings, and UserAdmin services.
+Spring Boot service that owns ORISO tenant records: identity and subdomain resolution, licensing limits, theming and branding media, feature settings, multilingual legal content, tenant admin controls, tenant id allocation/reservation, data processing agreements (DPA), platform DPIA master data, and machine translation of legal texts. It integrates with the ConsultingType, ApplicationSettings, and UserAdmin services through generated OpenAPI clients.
+
+Build facts (from `pom.xml` and `Dockerfile`): Java 21, Spring Boot parent 4.0.1, Spring Security 7.0.1, runtime image `eclipse-temurin:21-jre`, `--enable-preview` on compiler/Surefire/runtime. (`README.md` still says Java 17 / Spring Boot 3 in places; the pom is authoritative.)
 
 ## Architecture Layers
 
 ### Api And Routing
 
-OpenAPI contracts, generated-client contracts, controllers, and route boundaries.
+OpenAPI contract, generated server interfaces, controllers, and route boundaries.
 
 Key files:
-- `src/main/java/com/vi/tenantservice/api/controller/ExceptionHandlerAdvice.java` - src/main/java/com/vi/tenantservice/api/controller/ExceptionHandlerAdvice.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.controller;".
-- `src/main/java/com/vi/tenantservice/api/controller/TenantController.java` - src/main/java/com/vi/tenantservice/api/controller/TenantController.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.controller;".
-- `src/main/java/com/vi/tenantservice/api/controller/TenantDtoMapper.java` - src/main/java/com/vi/tenantservice/api/controller/TenantDtoMapper.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.controller;".
-- `src/main/java/com/vi/tenantservice/api/controller/VersionController.java` - src/main/java/com/vi/tenantservice/api/controller/VersionController.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.controller;".
-- `src/test/java/com/vi/tenantservice/api/controller/ActuatorControllerIT.java` - src/test/java/com/vi/tenantservice/api/controller/ActuatorControllerIT.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.controller;".
-- `src/test/java/com/vi/tenantservice/api/controller/AuthenticationMockBuilder.java` - src/test/java/com/vi/tenantservice/api/controller/AuthenticationMockBuilder.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.controller;".
-- `src/test/java/com/vi/tenantservice/api/controller/TenantControllerIT.java` - src/test/java/com/vi/tenantservice/api/controller/TenantControllerIT.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.controller;".
+- `api/tenantservice.yaml` - the REST contract; generated with the `spring` generator. Endpoint groups: `/tenantadmin/**` (CRUD, search, controls, DPIA master data, translation keys/translate, tenant-id availability/reservation, DPA publish/versions/status/sign/signatures/gate/invite, media upload), `/tenant/**` (authenticated reads, access check, group-chat author translation), `/tenant/public/**` (restricted metadata by subdomain/id/ids/single, public DPIA, public branding assets, public DPA confirm/forward), `/media/{mediaId}`.
+- `src/main/java/com/vi/tenantservice/api/controller/TenantController.java` - implements the generated tenant/tenantadmin interfaces and carries the `@PreAuthorize` endpoint authorization rules (~600 lines).
+- `src/main/java/com/vi/tenantservice/api/controller/TenantMediaController.java` - implements the generated `MediaApi`; streams stored tenant media.
+- `src/main/java/com/vi/tenantservice/api/controller/TenantDtoMapper.java` - DTO mapping between generated models and domain objects.
+- `src/main/java/com/vi/tenantservice/api/controller/ExceptionHandlerAdvice.java` - maps domain exceptions to HTTP responses.
+- `src/main/java/com/vi/tenantservice/api/controller/VersionController.java` - exposes build version info.
+- `src/main/java/com/vi/tenantservice/api/controller/interceptor/CorrelationIdFilter.java` - request correlation-id propagation.
 
 ### Auth And Tenant Context
 
 OAuth2/JWT security, Keycloak role mapping, local authorities, and tenant resolution.
 
 Key files:
-- `src/main/java/com/vi/tenantservice/config/security/AuthorisationService.java` - src/main/java/com/vi/tenantservice/config/security/AuthorisationService.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.config.security;".
-- `src/main/java/com/vi/tenantservice/config/security/JwtAuthConverter.java` - src/main/java/com/vi/tenantservice/config/security/JwtAuthConverter.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.config.security;".
-- `src/main/java/com/vi/tenantservice/config/security/JwtAuthConverterProperties.java` - src/main/java/com/vi/tenantservice/config/security/JwtAuthConverterProperties.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.config.security;".
-- `src/main/java/com/vi/tenantservice/config/security/KeycloakLogoutHandler.java` - src/main/java/com/vi/tenantservice/config/security/KeycloakLogoutHandler.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.config.security;".
-- `src/main/java/com/vi/tenantservice/config/security/WebSecurityConfig.java` - src/main/java/com/vi/tenantservice/config/security/WebSecurityConfig.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.config.security;".
-- `src/test/java/com/vi/tenantservice/config/security/AuthorisationServiceTest.java` - src/test/java/com/vi/tenantservice/config/security/AuthorisationServiceTest.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.config.security;".
+- `src/main/java/com/vi/tenantservice/config/security/WebSecurityConfig.java` - stateless JWT resource server; `/tenant/public/**` and the Swagger whitelist are `permitAll`, `/tenant/**` and `/tenantadmin/**` require authentication, and **`anyRequest()` is `permitAll`** - so every route outside those prefixes is public. `/media/{mediaId}` (`TenantMediaController`) is public by that rule and by design: legal-text images are read by anonymous visitors. Adding a controller outside `/tenant*` therefore publishes it unless a matcher is added here.
+- `src/main/java/com/vi/tenantservice/config/security/JwtAuthConverter.java` and `JwtAuthConverterProperties.java` - read realm roles from the Keycloak JWT.
+- `src/main/java/com/vi/tenantservice/api/authorisation/RoleAuthorizationAuthorityMapper.java`, `Authority.java`, `UserRole.java` - map ORISO roles to local `AUTHORIZATION_*` authorities.
+- `src/main/java/com/vi/tenantservice/config/security/AuthorisationService.java` - accessor for the authenticated principal and its claims.
+- `src/main/java/com/vi/tenantservice/api/tenant/TenantResolverService.java` - resolution order: `AccessTokenTenantResolver` (JWT claim), `CookieTenantResolver` (single-domain mode), `SubdomainTenantResolver` + `SubdomainExtractor` (request host).
+- `src/main/java/com/vi/tenantservice/api/facade/TenantFacadeAuthorisationService.java` - per-operation tenant-level authorisation checks.
 
 ### Tenant Domain Services
 
-Tenant lifecycle orchestration, admin controls, downstream synchronization, conversion, and validation services.
+Tenant lifecycle orchestration, admin controls, downstream synchronization, conversion, and validation.
 
 Key files:
-- `src/main/java/com/vi/tenantservice/api/converter/ConsultingTypePatchDTOConverter.java` - src/main/java/com/vi/tenantservice/api/converter/ConsultingTypePatchDTOConverter.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.converter;".
-- `src/main/java/com/vi/tenantservice/api/converter/ConverterUtils.java` - src/main/java/com/vi/tenantservice/api/converter/ConverterUtils.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.converter;".
-- `src/main/java/com/vi/tenantservice/api/converter/TenantConverter.java` - src/main/java/com/vi/tenantservice/api/converter/TenantConverter.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.converter;".
-- `src/main/java/com/vi/tenantservice/api/facade/TenantFacadeAuthorisationService.java` - src/main/java/com/vi/tenantservice/api/facade/TenantFacadeAuthorisationService.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.facade;".
-- `src/main/java/com/vi/tenantservice/api/facade/TenantFacadeChangeDetectionService.java` - src/main/java/com/vi/tenantservice/api/facade/TenantFacadeChangeDetectionService.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.facade;".
-- `src/main/java/com/vi/tenantservice/api/facade/TenantFacadeDependentSettingsOverrideService.java` - src/main/java/com/vi/tenantservice/api/facade/TenantFacadeDependentSettingsOverrideService.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.facade;".
-- `src/main/java/com/vi/tenantservice/api/facade/TenantServiceFacade.java` - src/main/java/com/vi/tenantservice/api/facade/TenantServiceFacade.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.facade;".
-- `src/main/java/com/vi/tenantservice/api/service/ConfigurationFileLoader.java` - src/main/java/com/vi/tenantservice/api/service/ConfigurationFileLoader.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.service;".
-- `src/main/java/com/vi/tenantservice/api/service/SingleDomainTenantOverrideService.java` - src/main/java/com/vi/tenantservice/api/service/SingleDomainTenantOverrideService.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.service;".
-- `src/main/java/com/vi/tenantservice/api/service/TemplateDescriptionServiceException.java` - src/main/java/com/vi/tenantservice/api/service/TemplateDescriptionServiceException.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.service;".
-- `src/main/java/com/vi/tenantservice/api/service/TemplateRenderer.java` - src/main/java/com/vi/tenantservice/api/service/TemplateRenderer.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.service;".
-- `src/main/java/com/vi/tenantservice/api/service/TemplateService.java` - src/main/java/com/vi/tenantservice/api/service/TemplateService.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.service;".
-- `src/main/java/com/vi/tenantservice/api/service/TenantAdminControlsService.java` - src/main/java/com/vi/tenantservice/api/service/TenantAdminControlsService.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.service;".
-- `src/main/java/com/vi/tenantservice/api/service/TenantService.java` - src/main/java/com/vi/tenantservice/api/service/TenantService.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.service;".
-- `src/main/java/com/vi/tenantservice/api/service/TranslationService.java` - src/main/java/com/vi/tenantservice/api/service/TranslationService.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.service;".
-- `src/main/java/com/vi/tenantservice/api/service/consultingtype/ApplicationSettingsService.java` - src/main/java/com/vi/tenantservice/api/service/consultingtype/ApplicationSettingsService.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.service.consultingtype;".
+- `src/main/java/com/vi/tenantservice/api/facade/TenantServiceFacade.java` - orchestrates create, update, delete, search, restricted reads, and downstream sync.
+- `src/main/java/com/vi/tenantservice/api/facade/TenantFacadeChangeDetectionService.java` and `TenantFacadeDependentSettingsOverrideService.java` - change detection and dependent-settings overrides on update.
+- `src/main/java/com/vi/tenantservice/api/service/TenantService.java` - core persistence-facing tenant service (caching via Ehcache).
+- `src/main/java/com/vi/tenantservice/api/service/TenantAdminControlsService.java` - tenant admin controls (allowed permission toggles).
+- `src/main/java/com/vi/tenantservice/api/service/TenantIdAllocationService.java` - tenant-id availability, next-free lookup, and reservations (`/tenantadmin/tenant-ids/**`).
+- `src/main/java/com/vi/tenantservice/api/service/SingleDomainTenantOverrideService.java` - single-domain (non-subdomain) deployment override.
+- `src/main/java/com/vi/tenantservice/api/converter/TenantConverter.java`, `ConsultingTypePatchDTOConverter.java`, `ConverterUtils.java` - entity/DTO conversion.
+- `src/main/java/com/vi/tenantservice/api/validation/TenantInputSanitizer.java` and `InputSanitizer.java` - OWASP HTML sanitization of tenant content.
+- `src/main/java/com/vi/tenantservice/api/service/SmtpPasswordEncryptionService.java` - AES-256-GCM encryption of tenant SMTP passwords at rest (#183), with `SmtpPasswordEncryptionMigration.java` for legacy plaintext values; key comes from `settings.smtp.password.encryption.secret` (blank disables with a startup warning).
+
+### Legal, DPA And DPIA
+
+Data processing agreement (DPA/AVV) lifecycle, platform DPIA master data, and legal-text templating - the largest growth area since mid-2026.
+
+Key files:
+- `src/main/java/com/vi/tenantservice/api/facade/TenantDpaFacade.java` - DPA orchestration behind `/tenantadmin/{id}/dpa/**` and the public confirm/forward endpoints.
+- `src/main/java/com/vi/tenantservice/api/service/TenantDpaService.java`, `TenantDpaStatusService.java`, `TenantDpaRetentionService.java`, `GoverningDpaResolver.java`, `DpaSignedNoticeHintService.java` - publish, status/gate evaluation, retention, and governing-version resolution.
+- `src/main/java/com/vi/tenantservice/api/service/DpaSignToken.java` - public sign-token used by `/tenant/public/dpa/confirm/{token}` and `/tenant/public/dpa/forward` (invite links; invalid tokens raise `InvalidDpaSignTokenException`).
+- `src/main/java/com/vi/tenantservice/api/model/TenantDpaVersionEntity.java`, `TenantDpaSignatureEntity.java`, `TenantDpaAdminSignatureEntity.java`, `DpaSignatureStatus.java`, `TenantDpaStatus.java` - versioned DPA documents and signatures with audit fields.
+- `src/main/java/com/vi/tenantservice/api/facade/PlatformDpiaMasterDataFacade.java`, `.../service/PlatformDpiaMasterDataService.java`, `.../model/PlatformDpiaMasterDataEntity.java` - platform-wide DPIA master data, editable via `/tenantadmin/dpia`, publicly readable via `GET /tenant/public/dpia`.
+- `src/main/java/com/vi/tenantservice/api/service/TemplateService.java`, `TemplateRenderer.java`, `ConfigurationFileLoader.java` - FreeMarker/Handlebars rendering of legal templates; placeholders typed by `.../model/DataProtectionPlaceHolderType.java`; templates in `src/main/resources/templates/`.
+
+### Translation
+
+Machine translation of tenant legal texts through pluggable LLM providers.
+
+Key files:
+- `src/main/java/com/vi/tenantservice/api/facade/TranslationFacade.java` - backs `/tenantadmin/translation/keys`, `/tenantadmin/translate`, and `/tenant/translate/group-chat-author-content`.
+- `src/main/java/com/vi/tenantservice/api/service/translation/TranslationProviderClient.java`, `OpenRouterClient.java`, `MistralClient.java`, `OpenAiCompatibleChatClient.java`, `ApiKeyMasker.java` - provider abstraction (OpenRouter and Mistral; API keys are stored per platform, masked on read).
+- `src/main/java/com/vi/tenantservice/api/service/TranslationService.java` - resolves the current language context (default `de`, `lang` cookie).
+- Defaults in `application.properties`: `translation.openrouter.*`, `translation.mistral.*`.
+
+### Media And Branding
+
+Tenant media upload and public branding assets.
+
+Key files:
+- `src/main/java/com/vi/tenantservice/api/service/TenantMediaService.java`, `.../model/TenantMediaEntity.java`, `.../repository/TenantMediaRepository.java` - stored media with size/content-type validation (`MediaSizeLimitExceededException`, `UnsupportedMediaContentException`).
+- `src/main/java/com/vi/tenantservice/api/service/PublicBrandingAssetService.java` and `BrandingAssetDecoder.java` - serve `/tenant/public/branding/{asset}` without authentication.
 
 ### Data And Persistence
 
-Tenant entities, repositories, MariaDB schema, Liquibase changelogs, and persistence tests.
+Tenant entities, repositories, MariaDB schema, and Liquibase changelogs.
 
 Key files:
-- `src/main/java/com/vi/tenantservice/api/model/DataProtectionPlaceHolderType.java` - src/main/java/com/vi/tenantservice/api/model/DataProtectionPlaceHolderType.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.model;".
-- `src/main/java/com/vi/tenantservice/api/model/TenantAdminAllowedPermissionTogglesSettings.java` - src/main/java/com/vi/tenantservice/api/model/TenantAdminAllowedPermissionTogglesSettings.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.model;".
-- `src/main/java/com/vi/tenantservice/api/model/TenantAdminControlsEntity.java` - src/main/java/com/vi/tenantservice/api/model/TenantAdminControlsEntity.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.model;".
-- `src/main/java/com/vi/tenantservice/api/model/TenantAdminControlsSettings.java` - src/main/java/com/vi/tenantservice/api/model/TenantAdminControlsSettings.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.model;".
-- `src/main/java/com/vi/tenantservice/api/model/TenantContent.java` - src/main/java/com/vi/tenantservice/api/model/TenantContent.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.model;".
-- `src/main/java/com/vi/tenantservice/api/model/TenantEntity.java` - src/main/java/com/vi/tenantservice/api/model/TenantEntity.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.model;".
-- `src/main/java/com/vi/tenantservice/api/model/TenantSetting.java` - src/main/java/com/vi/tenantservice/api/model/TenantSetting.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.model;".
-- `src/main/java/com/vi/tenantservice/api/model/TenantSettings.java` - src/main/java/com/vi/tenantservice/api/model/TenantSettings.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.model;".
-- `src/main/java/com/vi/tenantservice/api/model/TenantSmtpSettings.java` - src/main/java/com/vi/tenantservice/api/model/TenantSmtpSettings.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.model;".
-- `src/main/java/com/vi/tenantservice/api/repository/TenantAdminControlsRepository.java` - src/main/java/com/vi/tenantservice/api/repository/TenantAdminControlsRepository.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.repository;".
-- `src/main/java/com/vi/tenantservice/api/repository/TenantRepository.java` - src/main/java/com/vi/tenantservice/api/repository/TenantRepository.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.repository;".
-- `src/test/java/com/vi/tenantservice/api/repository/TenantRepositoryTest.java` - src/test/java/com/vi/tenantservice/api/repository/TenantRepositoryTest.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.repository;".
-- `src/main/resources/db/changelog/changeset/0001_initsql/initSql.xml` - src/main/resources/db/changelog/changeset/0001_initsql/initSql.xml is a data file in ORISO-TenantService; starts with "<?xml version='1.1' encoding='UTF-8' standalone='no'?>".
-- `src/main/resources/db/changelog/changeset/0001_initsql/initTables.sql` - src/main/resources/db/changelog/changeset/0001_initsql/initTables.sql is a data file in ORISO-TenantService; starts with "CREATE TABLE tenantservice.`tenant` (".
-- `src/main/resources/db/changelog/changeset/0002_add_privacy_and_terms_and_conditions/0002-changeSet.xml` - src/main/resources/db/changelog/changeset/0002_add_privacy_and_terms_and_conditions/0002-changeSet.xml is a data file in ORISO-TenantService; starts with "<?xml version='1.1' encoding='UTF-8' standalone='no'?>".
-- `src/main/resources/db/changelog/changeset/0002_add_privacy_and_terms_and_conditions/addPrivacyAndTermsAndConditionsColumns.sql` - src/main/resources/db/changelog/changeset/0002_add_privacy_and_terms_and_conditions/addPrivacyAndTermsAndConditionsColumns.sql is a data file in ORISO-TenantService; starts with "ALTER TABLE `tenantservice`.`tenant`".
+- `src/main/java/com/vi/tenantservice/api/model/TenantEntity.java` - the tenant aggregate (identity, subdomain, licensing, theming incl. accent/signal colors and login effect, content, settings JSON).
+- `src/main/java/com/vi/tenantservice/api/model/TenantSettings.java`, `TenantSetting.java`, `TenantSmtpSettings.java`, `TenantContent.java`, `TenantData.java`/`TenantDataView.java`, `TenantRestrictedData.java`/`TenantRestrictedDataView.java` - settings and read models.
+- `src/main/java/com/vi/tenantservice/api/model/AssignedOrSequenceIdGenerator.java` - allows explicitly assigned tenant ids, else sequence.
+- `src/main/java/com/vi/tenantservice/api/model/TenantIdReservationEntity.java`, `TenantIdReservationStatus.java`, `TenantIdAllocationStatus.java` - tenant-id reservation records.
+- Repositories in `src/main/java/com/vi/tenantservice/api/repository/`: `TenantRepository`, `TenantAdminControlsRepository`, `TenantDpaVersionRepository`, `TenantDpaSignatureRepository`, `TenantDpaAdminSignatureRepository`, `TenantIdReservationRepository`, `TenantMediaRepository`, `PlatformDpiaMasterDataRepository`.
+- `src/main/resources/db/changelog/tenantservice-master.xml` - master changelog; changesets `0001`-`0031` under `db/changelog/changeset/`, including `0013_tenant_admin_controls`, `0015`-`0021`+`0025`/`0026`/`0030`/`0031` (DPA versions, signatures, tokens, audit fields, reservation binding), `0022_widen_tenant_settings_column`, `0023_tenant_media`, `0024_tenant_id_reservation`, `0027_tenant_theming_accent_and_signal`, `0028_platform_dpia_master_data`, `0029_tenant_theming_login_effect`.
+- Liquibase execution is profile-gated, and every profile default can still be overridden by `SPRING_LIQUIBASE_ENABLED`/`SPRING_LIQUIBASE_CONTEXTS`: base `application.properties` defaults `enabled` to `false` with the `prod` context (the deployed cluster manages the schema separately); `local` and `dev` default `enabled` to `true` with the `seed` context; `staging` and `prod` default `enabled` to `true` with the `prod` context; `testing` sets `enabled=false` unconditionally, with no environment override.
 
 ### Configuration
 
 Runtime, build, package, framework, and environment configuration.
 
 Key files:
-- `.github/actions/docker-build-push/action.yml` - .github/actions/docker-build-push/action.yml is a config file in ORISO-TenantService; starts with "name: Reusable Docker Build and Publish steps".
-- `.github/actions/maven-build/action.yml` - .github/actions/maven-build/action.yml is a config file in ORISO-TenantService; starts with "name: Reusable Maven Build steps".
-- `.mvn/wrapper/maven-wrapper.properties` - .mvn/wrapper/maven-wrapper.properties is a config file in ORISO-TenantService; starts with "wrapperVersion=3.3.4".
-- `api/tenantservice.yaml` - api/tenantservice.yaml is a config file in ORISO-TenantService; starts with "openapi: 3.0.1".
-- `package-lock.json` - package-lock.json is a config file in ORISO-TenantService; starts with "{".
-- `package.json` - package.json is a config file in ORISO-TenantService; starts with "{".
-- `pom.xml` - pom.xml is a config file in ORISO-TenantService; starts with "<?xml version='1.0' encoding='UTF-8'?>".
-- `services/agencyadminservice.yaml` - services/agencyadminservice.yaml is a config file in ORISO-TenantService; starts with "openapi: 3.0.1".
-- `services/applicationsettingsservice.yml` - services/applicationsettingsservice.yml is a config file in ORISO-TenantService; starts with "openapi: 3.0.1".
-- `services/consultingtypeservice.yaml` - services/consultingtypeservice.yaml is a config file in ORISO-TenantService; starts with "openapi: 3.0.1".
-- `services/useradminservice.yaml` - services/useradminservice.yaml is a config file in ORISO-TenantService; starts with "openapi: 3.0.1".
-- `src/main/resources/application-dev.properties` - src/main/resources/application-dev.properties is a config file in ORISO-TenantService; starts with "# Logging: SLF4J (via Lombok)".
-- `src/main/resources/application-local.properties` - src/main/resources/application-local.properties is a config file in ORISO-TenantService; starts with "# Logging: SLF4J (via Lombok)".
-- `src/main/resources/application-prod.properties` - src/main/resources/application-prod.properties is a config file in ORISO-TenantService; starts with "# Logging: SLF4J (via Lombok)".
-- `src/main/resources/application-staging.properties` - src/main/resources/application-staging.properties is a config file in ORISO-TenantService; starts with "# Logging: SLF4J (via Lombok)".
-- `src/main/resources/application-testing.properties` - src/main/resources/application-testing.properties is a config file in ORISO-TenantService; starts with "# Logging: SLF4J (via Lombok)".
+- `pom.xml` - Java 21, Spring Boot parent 4.0.1, Spring Security 7.0.1, Keycloak adapter 17, Liquibase 4.23.2, OpenAPI Generator 7.17.0, Testcontainers 1.21.4, Mockito 5.20, Spotless.
+- `api/tenantservice.yaml` - own contract (server-side generation).
+- `services/consultingtypeservice.yaml`, `services/applicationsettingsservice.yml`, `services/useradminservice.yaml` - client generation inputs; `services/agencyadminservice.yaml` is present but not wired into the generator.
+- `src/main/resources/application.properties` plus profile overrides `application-{local,dev,staging,prod,testing}.properties`.
+- `src/main/java/com/vi/tenantservice/config/ConfigurationValidator.java` - fails fast on missing required env values (datasource, Keycloak/JWT, downstream service URLs).
+- `src/main/resources/ehcache.xml` with `.../api/config/CacheManagerConfig.java` and `.../api/cache/CacheEventLogger.java`.
+- Jackson tailoring: `.../api/config/RestrictedPublicTenantJacksonConfig.java` and `DpiaMasterDataJacksonConfig.java`.
 
 ### Deployment And Operations
 
-Docker, CI/CD workflows, Maven wrapper, and operational scripts.
+Docker, CI/CD workflows, contract gates, and operational scripts.
 
 Key files:
-- `.github/workflows/ci-feature-branch.yml` - .github/workflows/ci-feature-branch.yml is a pipeline file in ORISO-TenantService; starts with "name: CI - Feature Branch".
-- `.github/workflows/ci-main.yml` - .github/workflows/ci-main.yml is a pipeline file in ORISO-TenantService; starts with "name: CI - Main".
-- `.github/workflows/ci-pull-request.yml` - .github/workflows/ci-pull-request.yml is a pipeline file in ORISO-TenantService; starts with "name: CI - Pull Request".
-- `Dockerfile` - Dockerfile is a infra file in ORISO-TenantService; starts with "FROM eclipse-temurin:17-jre".
+- `.github/workflows/ci-feature-branch.yml`, `ci-pull-request.yml`, `ci-main.yml` - Maven build/test pipelines (reusable steps in `.github/actions/`).
+- `.github/workflows/openapi-contracts.yml` - OpenAPI contract gate; helper scripts in `scripts/contracts/` (publish provider contracts, verify consumer contract, provider source compatibility) with Python tests in `tests/contracts/`.
+- `.github/workflows/release-image.yml` - image release pipeline.
+- `scripts/ci/coverage-summary.py` and `test-report-guard.py` - CI report tooling, tested in `tests/ci/`.
+- `Dockerfile` - `eclipse-temurin:21-jre`, port 8081, runs `TenantService.jar` with `--enable-preview`.
 
 ### Documentation
 
 Human-facing repository documentation and Understand-Anything notes.
 
 Key files:
-- `CHANGELOG.md` - CHANGELOG.md is a docs file in ORISO-TenantService; starts with "# Changelog".
-- `README.md` - README.md is a docs file in ORISO-TenantService; starts with "# ORISO TenantService".
-
-### Application Core
-
-Application entry point, exceptions, shared utilities, templates, and supporting code.
-
-Key files:
-- `.gitignore` - .gitignore is a code file in ORISO-TenantService; starts with "# =============================================================================".
-- `LICENSE` - LICENSE is a code file in ORISO-TenantService; starts with "GNU AFFERO GENERAL PUBLIC LICENSE".
-- `check-version.sh` - check-version.sh is a script file in ORISO-TenantService; starts with "#!/bin/bash".
-- `commitlint.config.js` - commitlint.config.js is a code file in ORISO-TenantService; starts with "module.exports = { extends: ['@commitlint/config-conventional'] };".
-- `deploy-development.sh` - deploy-development.sh is a script file in ORISO-TenantService; starts with "#!/usr/bin/env bash".
-- `docker-build.cmd` - docker-build.cmd is a script file in ORISO-TenantService; starts with "docker build --no-cache -t tenantservice:development .".
-- `mvnw` - mvnw is a code file in ORISO-TenantService; starts with "#!/bin/sh".
-- `mvnw.cmd` - mvnw.cmd is a script file in ORISO-TenantService; starts with "<# : batch portion".
-- `run-trivy.sh` - run-trivy.sh is a script file in ORISO-TenantService; starts with "rm report*.sarif".
-- `spring-boot-ehcache/cache/.lock` - spring-boot-ehcache/cache/.lock is a code file in ORISO-TenantService.
-- `src/main/java/com/vi/tenantservice/TenantServiceApplication.java` - src/main/java/com/vi/tenantservice/TenantServiceApplication.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice;".
-- `src/main/java/com/vi/tenantservice/api/authorisation/Authority.java` - src/main/java/com/vi/tenantservice/api/authorisation/Authority.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.authorisation;".
-- `src/main/java/com/vi/tenantservice/api/authorisation/RoleAuthorizationAuthorityMapper.java` - src/main/java/com/vi/tenantservice/api/authorisation/RoleAuthorizationAuthorityMapper.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.authorisation;".
-- `src/main/java/com/vi/tenantservice/api/authorisation/UserRole.java` - src/main/java/com/vi/tenantservice/api/authorisation/UserRole.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.authorisation;".
-- `src/main/java/com/vi/tenantservice/api/cache/CacheEventLogger.java` - src/main/java/com/vi/tenantservice/api/cache/CacheEventLogger.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.cache;".
-- `src/main/java/com/vi/tenantservice/api/config/CacheManagerConfig.java` - src/main/java/com/vi/tenantservice/api/config/CacheManagerConfig.java is a code file in ORISO-TenantService; starts with "package com.vi.tenantservice.api.config;".
-
+- `README.md` - service overview (partially stale on Java/Spring versions).
+- `documentation/local-development.md` - mixed local frontend/UserService/TenantService setup.
+- `documentation/translation-meta.md` - translation metadata notes.
+- `CHANGELOG.md` - release history.
 
 ## Major Flows
 
-- Tenant admin API flow: `api/tenantservice.yaml`, `TenantController`, `TenantServiceFacade`, and `TenantService`.
-- Tenant admin controls flow: `TenantAdminControlsEntity`, `TenantAdminControlsRepository`, `TenantAdminControlsService`, and `0013_tenant_admin_controls` changelog.
-- Auth flow: `WebSecurityConfig`, JWT conversion, authority mapping, method security, and tenant resolver services.
-- Database flow: JPA entities and repositories map tenant records, settings, admin controls, and Liquibase schema changes.
-- External service flow: wrapper services call ConsultingType, ApplicationSettings, and UserAdmin generated OpenAPI clients.
-- Deployment flow: GitHub Actions, Maven, Dockerfile, and runtime application properties build and operate the service.
+- Tenant admin API flow: `api/tenantservice.yaml` -> `TenantController` -> `TenantServiceFacade` -> `TenantService`/`TenantRepository`, with `TenantInputSanitizer` and change-detection/override services on writes.
+- DPA flow: admin publishes a DPA version (`/tenantadmin/{id}/dpa`), invites signers, signers confirm via public token links (`/tenant/public/dpa/confirm/{token}`, `/tenant/public/dpa/forward`); status/gate endpoints report signature state; entities carry audit fields.
+- DPIA flow: `/tenantadmin/dpia` maintains platform DPIA master data; `GET /tenant/public/dpia` exposes it unauthenticated.
+- Translation flow: `TranslationFacade` -> provider clients (OpenRouter/Mistral) with per-platform API keys managed via `/tenantadmin/translation/keys`.
+- Media flow: `/tenantadmin/media` upload -> `TenantMediaService` -> `/media/{mediaId}` and `/tenant/public/branding/{asset}` reads.
+- Tenant-id flow: availability check, next-free lookup, reservation/release via `TenantIdAllocationService` and `AssignedOrSequenceIdGenerator`.
+- Auth flow: `WebSecurityConfig` -> `JwtAuthConverter` -> `RoleAuthorizationAuthorityMapper` -> `@PreAuthorize` rules; tenant context from token, cookie, or subdomain.
+- Database flow: JPA entities and repositories over MariaDB; Liquibase changesets `0001`-`0031` describe the schema and run wherever the active profile enables them - on by default in `local`, `dev`, `staging` and `prod`, off by default in the base profile, and off unconditionally in `testing` (see the storage section for the contexts).
+- Deployment flow: GitHub Actions (build, contract gate, release image), Maven, Dockerfile, and profile-based runtime properties.
 
 ## API And Service Dependencies
 
-- `api/tenantservice.yaml` - config, yaml
-- `services/agencyadminservice.yaml` - config, yaml
-- `services/applicationsettingsservice.yml` - config, yaml
-- `services/consultingtypeservice.yaml` - config, yaml
-- `services/useradminservice.yaml` - config, yaml
-- `src/main/java/com/vi/tenantservice/api/controller/ExceptionHandlerAdvice.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/controller/TenantController.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/controller/TenantDtoMapper.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/controller/VersionController.java` - code, java
-- `src/test/java/com/vi/tenantservice/api/controller/ActuatorControllerIT.java` - code, java
-- `src/test/java/com/vi/tenantservice/api/controller/AuthenticationMockBuilder.java` - code, java
-- `src/test/java/com/vi/tenantservice/api/controller/TenantControllerIT.java` - code, java
-
-## Authentication Relationship
-
-- `src/main/java/com/vi/tenantservice/api/authorisation/Authority.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/authorisation/RoleAuthorizationAuthorityMapper.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/authorisation/UserRole.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/exception/TenantAuthorisationException.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/facade/TenantFacadeAuthorisationService.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/model/TenantAdminAllowedPermissionTogglesSettings.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/service/httpheader/SecurityHeaderSupplier.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/tenant/AccessTokenTenantResolver.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/tenant/CookieTenantResolver.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/tenant/HttpUrlUtils.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/tenant/SubdomainExtractor.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/tenant/SubdomainTenantResolver.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/tenant/TenantHeaderSupplier.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/tenant/TenantResolver.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/tenant/TenantResolverService.java` - code, java
-- `src/main/java/com/vi/tenantservice/config/security/AuthorisationService.java` - code, java
-- `src/main/java/com/vi/tenantservice/config/security/JwtAuthConverter.java` - code, java
-- `src/main/java/com/vi/tenantservice/config/security/JwtAuthConverterProperties.java` - code, java
-- `src/main/java/com/vi/tenantservice/config/security/KeycloakLogoutHandler.java` - code, java
-- `src/main/java/com/vi/tenantservice/config/security/WebSecurityConfig.java` - code, java
+- `api/tenantservice.yaml` - own REST contract (spring server generation).
+- `services/consultingtypeservice.yaml` - generated Java client, wrapped by `.../api/service/consultingtype/ConsultingTypeService.java`.
+- `services/applicationsettingsservice.yml` - generated Java client, wrapped by `.../api/service/consultingtype/ApplicationSettingsService.java`.
+- `services/useradminservice.yaml` - generated Java client, wrapped by `.../api/service/consultingtype/UserAdminService.java`.
+- `services/agencyadminservice.yaml` - spec present, no client generation configured in `pom.xml`.
+- Client plumbing: `.../api/config/apiclient/*ApiControllerFactory.java`, `.../api/service/httpheader/SecurityHeaderSupplier.java`, `.../api/tenant/TenantHeaderSupplier.java`.
 
 ## Database Relationship
 
-- `src/main/java/com/vi/tenantservice/api/model/DataProtectionPlaceHolderType.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/model/TenantAdminAllowedPermissionTogglesSettings.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/model/TenantAdminControlsEntity.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/model/TenantAdminControlsSettings.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/model/TenantContent.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/model/TenantEntity.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/model/TenantSetting.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/model/TenantSettings.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/model/TenantSmtpSettings.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/repository/TenantAdminControlsRepository.java` - code, java
-- `src/main/java/com/vi/tenantservice/api/repository/TenantRepository.java` - code, java
-- `src/main/resources/db/changelog/changeset/0001_initsql/initSql.xml` - data, xml
-- `src/main/resources/db/changelog/changeset/0001_initsql/initTables.sql` - data, sql
-- `src/main/resources/db/changelog/changeset/0002_add_privacy_and_terms_and_conditions/0002-changeSet.xml` - data, xml
-- `src/main/resources/db/changelog/changeset/0002_add_privacy_and_terms_and_conditions/addPrivacyAndTermsAndConditionsColumns.sql` - data, sql
-- `src/main/resources/db/changelog/changeset/0003_change_tenant_attributes/0003-changeSet.xml` - data, xml
-- `src/main/resources/db/changelog/changeset/0003_change_tenant_attributes/changeTenantAttributes.sql` - data, sql
-- `src/main/resources/db/changelog/changeset/0004_add_tenant_settings/0004-changeSet.xml` - data, xml
-- `src/main/resources/db/changelog/changeset/0004_add_tenant_settings/addSettingTopicsInRegistrationEnabled.sql` - data, sql
-- `src/main/resources/db/changelog/changeset/0005_change_tenant_settings_structure/0005-changeSet.xml` - data, xml
+- Core: `TenantEntity` + `TenantRepository` (tenant table, settings JSON widened by changeset `0022`).
+- Admin controls: `TenantAdminControlsEntity` + repository (changeset `0013`).
+- DPA: `TenantDpaVersionEntity`, `TenantDpaSignatureEntity`, `TenantDpaAdminSignatureEntity` + repositories (changesets `0015`-`0021`, `0025`, `0026`, `0030`, `0031`).
+- Media: `TenantMediaEntity` + repository (changeset `0023`).
+- Tenant-id reservations: `TenantIdReservationEntity` + repository (changesets `0024`, `0031`).
+- DPIA: `PlatformDpiaMasterDataEntity` + repository (changeset `0028`).
+- Theming columns: changesets `0027` (accent/signal colors) and `0029` (login effect).
 
 ## Deployment Relationship
 
-- `.github/workflows/ci-feature-branch.yml` - pipeline, yaml
-- `.github/workflows/ci-main.yml` - pipeline, yaml
-- `.github/workflows/ci-pull-request.yml` - pipeline, yaml
-- `Dockerfile` - infra, dockerfile
-- `check-version.sh` - script, shell
-- `deploy-development.sh` - script, shell
-- `docker-build.cmd` - script, batch
-- `mvnw.cmd` - script, batch
-- `run-trivy.sh` - script, shell
+- `.github/workflows/ci-feature-branch.yml`, `ci-pull-request.yml`, `ci-main.yml`, `openapi-contracts.yml`, `release-image.yml` - pipelines.
+- `.github/actions/maven-build/action.yml`, `.github/actions/docker-build-push/action.yml` - reusable steps.
+- `Dockerfile`, `docker-build.cmd`, `deploy-development.sh`, `check-version.sh`, `run-trivy.sh` - image build and ops scripts.
+- `scripts/ci/`, `scripts/contracts/`, `tests/ci/`, `tests/contracts/` - CI gate tooling and its tests.
 
 ## ORISO Ecosystem Fit
 
-`ORISO-TenantService` is the tenant registry for ORISO. Its local contracts and wrapper services show relationships to ConsultingTypeService, ApplicationSettingsService, UserAdminService, and tenant-aware callers that need public or authenticated tenant metadata.
+`ORISO-TenantService` is the tenant registry for ORISO. Beyond tenant metadata it now owns the platform's tenant-facing legal machinery: DPA versioning and signature collection (including public token-based signing links), platform DPIA master data with a public read endpoint, machine translation of legal texts, and public branding assets. Its local contracts and wrapper services show relationships to ConsultingTypeService, ApplicationSettingsService, UserAdminService, and tenant-aware callers that need public or authenticated tenant metadata.
